--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,31 @@
 # Enable rewriting
 RewriteEngine On
 
+# Allow access from all domains
+Header set Access-Control-Allow-Origin "*"
+
+# Set default character set
+AddDefaultCharset UTF-8
+
+# Allow directory listing
+Options +Indexes
+
+# Set proper permissions
+<FilesMatch "^.*$">
+    Order Allow,Deny
+    Allow from all
+</FilesMatch>
+
+# Handle 403 errors
+ErrorDocument 403 /error/403.php
+
+# Protect against common exploits
+<IfModule mod_headers.c>
+    Header set X-Content-Type-Options nosniff
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Frame-Options SAMEORIGIN
+</IfModule>
+
 # If the request is for an existing file or folder, serve it
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
@@ -8,6 +33,3 @@ RewriteRule ^ - [L]
 
 # All other requests go to index.php
 RewriteRule ^ index.php [L,QSA]
-
-# Also catch any 404 errors and redirect to index.php
-ErrorDocument 404 /index.php    
